Bug 416635 - GTK 2 and 3 do not use Breeze by default
Summary: GTK 2 and 3 do not use Breeze by default
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_style (other bugs)
Version First Reported In: 5.17.90
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Mikhail Zolotukhin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-23 08:59 UTC by Fabian Vogt
Modified: 2020-02-04 17:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2020-01-23 08:59:07 UTC
After login, both .config/gtkrc and .config/gtkrc-2.0 exist, but only in .config/gtkrc the theme is set to Breeze.
This means that GTK2 uses the fallback theme by default.

GTK3 also uses Adwaita by default. The theme is not set in .config/gtk-3.0/settings.ini.

Also, with this, is the kconf_update script in breeze-gtk still needed/used?
Comment 1 Mikhail Zolotukhin 2020-02-04 17:39:31 UTC
Git commit d892dc2b44ae3fa4a8c1f86e4a92df23b4c18cdd by Mikhail Zolotukhin.
Committed on 04/02/2020 at 17:38.
Pushed by gikari into branch 'Plasma/5.18'.

Upgrade theme to Breeze GTK on startup

Also apply it, if the config is empty. This is a port of kconf_update
script from `breeze-gtk` repo, but this time it use gtkconfig kded
module methods to manipulate config (to avoid code duplication and to
write config to all possible configuration storages).

Also kded module updates config for theme on every start, if it is
empty.

Summary:
FIXED-IN: 5.18.0

Test Plan:

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26891

M  +1    -0    CMakeLists.txt
A  +38   -0    kconf_update/CMakeLists.txt
A  +3    -0    kconf_update/gtkconfig.upd
A  +56   -0    kconf_update/gtktheme.cpp     [License: GPL (v2/3)]
M  +2    -2    kded/configeditor.cpp

https://commits.kde.org/kde-gtk-config/d892dc2b44ae3fa4a8c1f86e4a92df23b4c18cdd